--- a/Practice02/src/style/sass/components/_customer-feedbacks.scss
+++ b/Practice02/src/style/sass/components/_customer-feedbacks.scss
@@ -1,68 +1,153 @@
-.customers-feedbacks {
-    gap: 90px;
-    height: 126px;
-    margin-bottom: 62px;
-    margin-left: 10px;
-    display: flex;
-}
-
-.customer-pro {
-    cursor: pointer;
+.about-us__content {
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     display: flex;
-}
-
-.baseline {
-    width: 264px;
-    height: 4px;
-    margin-top: 2px;
-}
-
-.baseline--visibility-hidden {
-    visibility: hidden;
-}
-
-.baseline img {
-    width: 100%;
-    height: 100%;
-}
-
-.customer-ava {
-    width: 48px;
-    height: 48px;
-}
-
-
-.customer-infor {
-    align-items: center;
-    margin-right: 33px;
-    margin-bottom: px;
-    display: flex;
-}
-
-.name-job {
-    margin-left: 16px;
-    margin-bottom: 6px;
-}
-
-.name,
-.job {
+    gap: 40px;
+  }
+  
+  .about-us__content h2 {
+    text-align: center;
+    width: 190px;
+    color: #35414B;
+    text-align: center;
+    line-height: 24px; 
+  }
+  
+  .about-us__content p {
     font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    line-height: 16px;
+    width: 315px;
     color: var(--River-Bed);
-}
-
-.name {
-    font-weight: 600;
-    margin-right: 7px;
-    margin-top: 3px;
-}
-
-.job {
+    text-align: center;
+    font-size: 16px;
     font-weight: 400;
-    margin-top: 7px;
-    margin-left: 0px;
-}
+    line-height: 24px;
+  }
+  
+  .baseline {
+    display: none;
+  }
+  
+  .baseline--visibility-hidden {
+    display: none;
+  }
+  
+  .name,
+  .job {
+      font-family: 'Inter', sans-serif;
+      color: var(--River-Bed);
+      text-align: center;  
+      line-height: 13px;   
+      font-size: 13px;
+      margin-top: 9px;
+  }
+  
+  .name {
+    font-weight: 600;
+  }
+  
+  .job {
+    font-weight: 400;
+    margin-top: 8px;
+  }
+  
+  .customer-infor {
+    align-items: center;
+    margin-right: 2px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+  }
+  
+  .customer-infor-hidden {
+    display: none;
+  }
+
+  @media only screen and (min-width: 415px) {
+    .about-us__content {
+      gap: 50px;
+      margin-top: 60px;
+    }
+    
+    .about-us__content h2 {
+      text-align: center;
+      width: 394px;
+      height: 96px;
+      margin-top: 40px;
+      margin-right: 14px;
+      color: #35414B;
+      text-align: center;
+      line-height: 48px; 
+    }
+    
+    .about-us__content p {
+      width: 543px;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 32px;
+      margin-top: -2px;
+      margin-left: 15px;
+    }
+    
+    .baseline {
+      display: block;
+      width: 264px;
+      height: 4px;
+      margin-top: 2px;
+    }
+    
+    .baseline--visibility-hidden {
+      display: block;
+      visibility: hidden;
+    }
+
+    .name-job {
+      margin-left: 16px;
+      margin-bottom: 6px;
+  }
+    
+    .name,
+    .job {
+        line-height: 16px;   
+        font-size: 16px;
+        margin-top: 9px;
+    }
+    
+    .name {
+      font-weight: 600;
+      text-align: left;
+    }
+    
+    .job {
+      font-weight: 400;
+      margin-top: 8px;
+      text-align: left;
+    }
+
+    .customers-feedbacks {
+      gap: 90px;
+      height: 126px;
+      margin-top: 30px;
+      margin-bottom: 62px;
+      margin-left: 10px;
+      display: flex;
+  }
+    
+    .customer-pro {
+      cursor: pointer;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      display: flex;
+  }
+    .customer-infor-hidden {
+      display: block;
+    }
+    .customer-infor, 
+    .customer-infor-hidden {
+      margin-right: 2px;
+      display: flex;
+      flex-direction: row;
+      margin-top: 40px;
+    }
+  }
