--- a/Practice02/src/style/sass/components/_functions.scss
+++ b/Practice02/src/style/sass/components/_functions.scss
@@ -1,42 +1,101 @@
-.feature {
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-top: 31px;
-    margin-bottom: 3px;
-    margin-left: 68px;
-    display: flex;
-}
+.feature-img img {
+    width: 48px;
+    height: 48px;
+    object-fit: fill;
+  }
 
 .feature-img {
-    margin-top: 19px;
+    margin-top: 20px;
 }
-
-.feature__descripstion {
-    width: 23%;
-    margin: 2px 10px 2px 0;
-    padding: 17px;
-    display: inline-block;
-}
-
-.feature__descripstion img {
-    margin-bottom: -25px;
-    margin-top: 1px;
-}
-
-.feature__descripstion p {
+  
+  .feature {
+    flex-wrap: wrap;
+    display: flex;
+    text-align: center;
+    width: 100%;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .feature__descripstion__hidden {
+    display: none;
+  }
+  
+  .feature__descripstion h4,
+  .feature__descripstion__hidden h4 {
+    color: var(--second);
+    margin-top: 15px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    text-align: center;
+    font-size: 18px;
+  }
+  
+  .feature__descripstion p,
+  .feature__descripstion__hidden p {
     color: var(--River-Bed);
-    margin: 9px 0 0 1px;
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-}
+    text-align: center;
+    width: 300px;
+    margin-top: 10px;
+  }
 
-.feature__descripstion h4 {
-    color: var(--Limed-Spruce);
-    margin-top: 45px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    line-height: 18px;
-    font-size: 18px !important;
-}
+
+  @media only screen and (min-width: 415px) {
+    .feature-img img {
+      width: 64px;
+      height: 64px;
+      object-fit: fill;
+    }
+  
+  .feature-img {
+      margin-top: 20px;
+      text-align: left;
+  }
+    
+    .feature {
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      margin-top: 31px;
+      margin-bottom: 3px;
+      margin-left: 68px;
+      display: flex;
+    }
+    
+    .feature__descripstion,
+    .feature__descripstion__hidden {
+      display: block;
+      width: 23%;
+      margin: 2px 10px 2px 0;
+      padding: 17px;
+      display: inline-block;
+    }
+    
+    .feature__descripstion h4,
+    .feature__descripstion__hidden h4 {
+      color: var(--second);
+      margin-top: 15px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 600;
+      line-height: 18px;
+      text-align: left;
+      font-size: 18px;
+    }
+    
+    .feature__descripstion p,
+    .feature__descripstion__hidden p {
+      color: var(--River-Bed);
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      text-align: left;
+      width: 300px;
+      margin-top: 10px;
+    }
+  
+  }
