--- a/Practice02/src/style/sass/components/_product-feature.scss
+++ b/Practice02/src/style/sass/components/_product-feature.scss
@@ -1,20 +1,86 @@
+.product__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+  }
+
+  .text {
+    margin-top: 27px;
+  }
+  
+  .survey-feature p,
+  .ad-feature p {
+      width: 308px;
+      color: var(--River-Bed);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      font-family: "Inter", sans-serif;
+      margin-left: 26px;
+  }
+  
+  .survey-feature {
+    background-color: #F6F3FC;
+    border-bottom: 8px solid var(--Violet);
+    width: 368px;
+    height: 128px;
+    margin-top: 20px;
+    border-radius: 8px 8px 0px 0px;
+    text-align: center;
+  }
+  
+  .survey-feature h4,
+  .ad-feature h4 {
+      font-size: 18px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 600;
+      line-height: 26px;
+      margin-bottom: 1px;
+  }
+  
+  .ad-feature {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .line {
+    width: 368px;
+  }
+
+@media only screen and (min-width: 415px) {
+  .product__content {
+    flex-direction: column;
+    gap: 22px;
+    margin-left: 5px;
+    display: flex;
+}
+
 .survey-feature p,
 .ad-feature p {
     color: var(--River-Bed);
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    font-family: "Inter", sans-serif;
 }
 
 .survey-feature {
     background-color: #F6F3FC;
+    border-bottom: none;
     border-left: 8px solid var(--Violet);
     width: 368px;
     height: 128px;
     border-radius: 0px 8px 8px 0px;
     margin-top: 2px;
+    text-align: left;
+}
+
+.ad-feature {
+  text-align: left;
+  margin-top: 20px;
+  width: 385px;
 }
 
 .ad-feature p,
@@ -24,16 +90,16 @@
 
 .ad-feature p,
 .ad-feature h4 {
- 
+    margin-left: 33px;
 }
 
 .survey-feature h4 {
     margin-top: 5px;
-
+    margin-left: 24px;
 }
 
 .survey-feature p {
- 
+    margin-left: 24px;
     margin-top: 6px
 }
 
@@ -54,4 +120,7 @@
 .line {
     margin-top: 27px;
     margin-left: 17px;
+}
+
+
 }
