--- a/Practice02/src/style/sass/layout/_about-us-section.scss
+++ b/Practice02/src/style/sass/layout/_about-us-section.scss
@@ -1,84 +1,81 @@
 .about-us {
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 6px;
-    width: 100%;
-    height: 786px;
-    display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 414px;
+  display: flex;
+  margin-top: 50px;
 }
-
-.about-us__content {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    margin-top: 60px;
-    display: flex;
-}
-
-.about-us__content h2 {
-    text-align: center;
-    width: 394px;
-    height: 96px;
-    margin-top: 40px;
-    margin-right: 14px;
-    line-height: 48px;
-}
-
-.about-us__content p {
-    font-family: 'Inter', sans-serif;
-    text-align: center;
-    width: 543px;
-    height: 96px;
-    margin-top: -2px;
-    margin-left: 15px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 32px;
-}
-
-
 
 .install-section {
-    background-image: url(../../assets/image/install-section.png);
-    border-radius: 16px;
-    justify-content: space-around;
-    align-items: center;
-    width: 1111px;
-    height: 224px;
-    margin-right: 11px;
-    display: flex;
+  background-color: #796EFF;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 414px;
+  height: 292px;
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  margin-top: 56px;
+  margin-right: 12px;
 }
 
 h3 {
-    color: var(--primary);
-    width: 423px;
-    height: 96px;
-    margin-top: 2px;
-    margin-left: 12px;
-    font-family: Inter, sans-serif;
-    font-size: 32px;
-    font-weight: 600;
-    line-height: 48px;
+  color: var(--primary);
+  width: 322px;
+  font-family: 'Inter', sans-serif;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
 }
 
 .install-app {
-    gap: 20px;
-    margin-right: 10px;
-    display: flex;
+  margin-right: 10px;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
 }
 
-.app-store {
-    margin-left: 4px
-}
+@media only screen and (min-width: 415px) {
+  .about-us {
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      gap: 6px;
+      width: 100%;
+      height: 786px;
+      display: flex;
+  }
 
-.app-store,
-.gg-play {
-    cursor: pointer;
-}
+  .install-section {
+      background-color: #796EFF;
+      justify-content: space-evenly;
+      align-items: left;
+      width: 1110px;
+      height: 224px;
+      background-repeat: no-repeat;
+      margin-top: 56px;
+      margin-right: 12px;
+      border-radius: 16px;
+      flex-direction: row;
+  }
 
-.gg-play:hover,
-.app-store:hover {
-    transform: scale(1.1);
+  h3 {
+      width: 423px;
+      height: 96px;
+      text-align: left;
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 48px;
+  }
+
+  .install-app {
+      margin-right: 10px;
+      display: flex;
+      gap: 20px;
+
+  }
 }
