--- a/Practice02/src/style/sass/layout/_chart-section.scss
+++ b/Practice02/src/style/sass/layout/_chart-section.scss
@@ -1,60 +1,133 @@
 .charts {
-    background-image: url(../../assets/image/bgcharts.png);
-    justify-content: center;
-    align-items: center;
-    gap: 88px;
-    height: 541px;
-    display: flex;
+  background-image: url(../../assets/image/bgcharts.png);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 414px;
+  margin-right: 12px;
+  height: 538px;
 }
 
 .chart__content {
-    flex-direction: column;
-    gap: 25px;
-    margin-top: 2px;
-    margin-bottom: 5px;
-    margin-left: 14px;
-    display: flex;
-}
-
-.chart__content h2 {
-    text-align: left;
-    width: 341px;
-    height: 96px;
-    margin-left: -8px;
-    font-family: Inter, sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 48px;
-}
-
-.chart__content p {
-    font-family: 'Inter', sans-serif;
-    color: var(--River-Bed);
-    width: 413px;
-    height: 72px;
-    margin-left: -8px;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-}
-
-.chart-button {
-    background-color: #796EFF;
-    color: var(--primary);
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    width: 164px;
-    height: 52px;
-    margin-top: 5px;
-    margin-left: -8px;
-    padding-top: 4px;
-    padding-left: 0;
-    font-size: 16px;
+  flex-direction: column;
+  display: flex;
+  order: 2;
+  margin-bottom: 6px;
+  gap: 16px;
 }
 
 .chart-image {
-    margin-top: 2px;
-    margin-right: 28px;
+  width: 384px;
+  height: 260.648px;
+  margin-top: 32px;
+  margin-left: 10px;
+}
+
+.chart-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.chart__content h2 {
+  text-align: center;
+  width: 190px;
+  font-family: 'Inter', sans-serif;
+  color: var(--second);
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  margin-left: 20%;
+  margin-top: 32px;
+}
+
+.chart__content p {
+  font-family: 'Inter', sans-serif;
+  color: var(--River-Bed);
+  width: 300px;
+  font-size: 16px;
+  color: #4E5A65;
+  text-align: center;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 5px;
+}
+
+.chart-button {
+  background-color: #796EFF;
+  color: var(--primary);
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  padding-top: 4px;
+  padding-left: 0;
+  font-size: 16px;
+  width: 318px;
+  height: 52px;
+  flex-shrink: 0;
+  margin-bottom: 32px;
+}
+
+@media only screen and (min-width: 415px) {
+  .charts {
+      background-image: url(../../assets/image/bgcharts.png);
+      justify-content: center;
+      align-items: center;
+      gap: 88px;
+      height: 541px;
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+  }
+
+  .chart__content {
+      flex-direction: column;
+      display: flex;
+      order: 0;
+      gap: 25px;
+      margin-top: 2px;
+      margin-bottom: 5px;
+      margin-left: 14px;
+  }
+
+  .chart-image {
+      width: 596.39px;
+      height: 404.684px;
+      margin-top: 32px;
+      margin-left: 10px;
+  }
+
+  .chart-image img {
+      width: 100%;
+      height: 100%;
+  }
+
+  .chart__content h2 {
+      text-align: left;
+      width: 341px;
+      height: 96px;
+      font-size: 40px;
+      font-weight: 600;
+      line-height: 48px;
+      margin-left: -8px;
+  }
+
+  .chart__content p {
+      width: 413px;
+      color: #4E5A65;
+      text-align: left;
+      margin-top: 5px;
+      margin-left: -8px;
+  }
+
+  .chart-button {
+      padding-left: 0;
+      font-size: 16px;
+      width: 164px;
+      height: 52px;
+      flex-shrink: 0;
+      margin-bottom: 32px;
+      margin-left: -8px;
+      padding-bottom: 3px;
+  }
 }
