--- a/Practice02/src/style/sass/layout/_functions-section.scss
+++ b/Practice02/src/style/sass/layout/_functions-section.scss
@@ -1,26 +1,79 @@
-.functions {
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 1440px;
-    height: 648px;
-    margin: auto auto 52px;
-    display: flex;
-}
-
 h2 {
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 40px;
-    color: var(--Limed-Spruce);
-    font-style: normal;
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  color: var(--Limed-Spruce);
+  font-style: normal;
+  color: #35414B;
+  text-align: center;
 }
 
-
+.functions {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 414px;
+  display: flex;
+  margin-bottom: 30px;
+}
 
 .functions__headline {
-    margin-top: 94px;
-    margin-right: 17px;
+  margin-top: 56px;
 }
 
+.btn-view {
+  width: 318px;
+  height: 52px;
+  border-radius: 4px;
+  border: 1px solid #ECE5FF;
+  background: #ECE5FF;
+  color: #7259FA;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  margin-top: 40px;
+}
+
+@media only screen and (min-width: 415px) {
+  h2 {
+      font-size: 40px;
+      line-height: 40px;
+      color: #35414B;
+      text-align: center;
+  }
+
+  .functions {
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      width: 1440px;
+      height: 648px;
+      margin: auto auto 52px;
+      display: flex;
+  }
+
+  .functions__headline {
+      margin-top: 94px;
+      margin-right: 17px;
+  }
+
+  .btn-view {
+      display: none;
+      width: 318px;
+      height: 52px;
+      border-radius: 4px;
+      border: 1px solid #ECE5FF;
+      background: #ECE5FF;
+      color: #7259FA;
+      text-align: center;
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 16px;
+      margin-top: 40px;
+  }
+
+}
