--- a/Practice02/src/style/sass/pages/_landingpage.scss
+++ b/Practice02/src/style/sass/pages/_landingpage.scss
@@ -4,5 +4,11 @@ body {
     overflow-x: hidden; 
 }
 .container {
-    width: 1440px;
+    width: 414px;
+}
+
+@media only screen and (min-width: 415px) {
+    .container {
+        width: 1440px;
+    }
 }
