fix desktop with perfect pixel

--- a/Practice02/src/style/sass/abstracts/_placeholder.scss
+++ b/Practice02/src/style/sass/abstracts/_placeholder.scss
@@ -4,11 +4,12 @@
     font-size: 16px;
     line-height: 16px;
     color: #97A5B5;
-    padding: 18px 99px 18px 2px;
+    padding: 18px 61px;
 }
 
 @media only screen and (min-width: 415px) {
     ::placeholder {
         font-family: 'Inter', sans-serif;
+        padding: 18px 99px 18px 2px;
     }
 }
