--- a/Practice02/src/style/sass/components/_customer-feedbacks.scss
+++ b/Practice02/src/style/sass/components/_customer-feedbacks.scss
@@ -74,7 +74,7 @@
       width: 394px;
       height: 96px;
       margin-top: 40px;
-      margin-right: 14px;
+      margin-right: 5px;
       color: #35414B;
       text-align: center;
       line-height: 48px; 
@@ -86,14 +86,15 @@
       font-weight: 400;
       line-height: 32px;
       margin-top: -2px;
-      margin-left: 15px;
+      margin-left: 25px;
     }
     
     .baseline {
       display: block;
       width: 264px;
       height: 4px;
-      margin-top: 2px;
+      margin-bottom: 30px;
+      margin-left: 40px;
     }
     
     .baseline--visibility-hidden {
@@ -110,7 +111,7 @@
     .job {
         line-height: 16px;   
         font-size: 16px;
-        margin-top: 9px;
+        margin-top: -9px;
     }
     
     .name {
@@ -125,9 +126,9 @@
     }
 
     .customers-feedbacks {
-      gap: 90px;
+      gap: 80px;
       height: 126px;
-      margin-top: 30px;
+      margin-top: 28px;
       margin-bottom: 62px;
       margin-left: 10px;
       display: flex;
@@ -139,15 +140,17 @@
       justify-content: space-around;
       align-items: center;
       display: flex;
+      margin-right: 15px;
   }
     .customer-infor-hidden {
       display: block;
+      margin-left: -50px;
     }
     .customer-infor, 
     .customer-infor-hidden {
       margin-right: 2px;
       display: flex;
       flex-direction: row;
-      margin-top: 40px;
+      margin-top: 5px;
     }
   }
