--- a/Practice02/src/style/sass/components/_functions.scss
+++ b/Practice02/src/style/sass/components/_functions.scss
@@ -59,22 +59,27 @@
     
     .feature {
       flex-wrap: wrap;
-      justify-content: space-evenly;
-      margin-top: 31px;
+      justify-content: center;
+      margin-top: 5px;
       margin-bottom: 3px;
-      margin-left: 68px;
+      margin-left: 40px;
       display: flex;
+      gap: 0px;
     }
     
     .feature__descripstion,
     .feature__descripstion__hidden {
       display: block;
       width: 23%;
-      margin: 2px 10px 2px 0;
+      margin: 2px 10px 2px 30px;
       padding: 17px;
       display: inline-block;
     }
     
+    .feature__descripstion {
+      margin-top: 10px;
+    }
+
     .feature__descripstion h4,
     .feature__descripstion__hidden h4 {
       color: var(--second);
