--- a/Practice02/src/style/sass/components/_social-icon.scss
+++ b/Practice02/src/style/sass/components/_social-icon.scss
@@ -1,31 +1,26 @@
 .banner__logo {
-    justify-content: center;
+    justify-content: space-evenly;
     margin-top: 10px;
     display: flex;
-    gap: 40px;
+    gap: 2px;
   }
   
   .gg {
-    object-fit: fill;
     width: 56px;
     height: 18.278px;
   }
   
   .air {
-    object-fit: fill;
     width: 56px;
     height: 17.472px;
   }
   
   .fb {
-    object-fit: fill;
     width: 53.17px;
     height: 10.902px;
-    margin-top: 4px;
   }
   
   .hub {
-    object-fit: fill;
     width: 56px;
     height: 16.307px;   
   }
@@ -34,51 +29,55 @@
     display: none;
   }
   
-  .gg,
-  .air,
-  .fb,
-  .hub,
-  .slack img {
+  .gg img,
+  .air img,
+  .fb img,
+  .hub img {
     cursor: pointer;
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
   }
 
   
 @media only screen and (min-width: 415px) {
   .banner__logo {
-    justify-content: center;
+    justify-content: space-evenly;
     width: 1342px;
     margin-top: 23px;
     display: flex;
-    gap: 90px;
+    align-items: center;
+    margin-left: 57px;
   }
   
   .gg {
     width: 80px;
     height: 26.11px;
+    margin-left: 60px;
   }
   
   .air {
     width: 80px;
     height: 24.96px;
+    margin-right: 0px;
   }
   
   .fb {
     width: 77.17px;
     height: 15.82px;
-    margin-top: 4px;
   }
   
   .hub {
     width: 80px;
-    height: 23.3px;    
-    margin-top: 2px; 
+    height: 23.3px; 
+    margin-right: 6px;
   }
   
   .slack {
     display: block;
     width: 80px;
     height: 20.24px;
-    margin-top: 3px;
+    margin-right: 77px;
   }
   
   .gg,
