--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -5,6 +5,7 @@
   border: 1px;
   margin-top: -12px;
   margin-bottom: 60px;
+  width: 414px;
 }
 
 .banner__sign-up {
@@ -167,6 +168,10 @@ input[type=text] {
 @media only screen and (min-width: 415px) {
   .banner {
       background-size: 100% 60%;
+      width: 1440px;
+      margin: auto;
+      margin-bottom: 100px;
+      margin-top: -9px;
   }
 
   .banner__save {
@@ -183,10 +188,19 @@ input[type=text] {
 
   .banner__get-acc {
       width: 198px;
-      height: 32px;
+      height: 34px;
       margin-left: -15px;
       border-radius: 0px 100px 100px 0px;
   }
+
+  .banner__discount {
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    height: 79px;
+    margin-left: 10px;
+    display: flex;
+}
 
   .banner__get-acc a {
       font-family: 'Inter', sans-serif;
@@ -197,18 +211,21 @@ input[type=text] {
       text-decoration: none;
       color: var(--Limed-Spruce);
   }
-
-
-  .banner__save p,
+  
   .banner__get-acc p {
+    padding-bottom: 3px;
+  }
+
+  .banner__save p {
       padding: 7px 0px 0px 3px;
   }
 
   .banner__get-acc p:hover {
       background: #DCECCB;
       width: 198px;
-      height: 26px;
+      height: 24px;
       border-radius: 0px 100px 100px 0px;
+      padding-top: 5px;
   }
 
 
@@ -218,10 +235,10 @@ input[type=text] {
 
 
   .banner__heading {
-      width: 830px;
+      width: 800px;
       height: 144px;
-      margin-right: 20px;
-      font-size: 65px;
+      margin-right: 30px;
+      font-size: 63px;
       font-weight: 700;
       line-height: 70px;
   }
@@ -235,22 +252,24 @@ input[type=text] {
       line-height: 25px;
       width: 508px;
       height: 48px;
-      margin-bottom: 2px;
-      margin-right: 23px;
+      margin-bottom: 5px;
+      margin-right: 48px;
   }
 
   .banner__box {
       justify-content: center;
       display: inline;
       height: 60px;
-      margin: -4px 10px 0 1px;
+      margin-left: 0px;
+      margin-top: -4px;
+      margin-bottom: -9px;
   }
 
   .text-box {
       background-color: var(--primary);
       border: 1px solid #E1E5EA;
       border-radius: 4px 0px 0 4px;
-      width: 320px;
+      width: 322px;
       height: 48px;
   }
 
@@ -262,12 +281,12 @@ input[type=text] {
       text-align: center;
       border: 1px;
       border-radius: 0 4px 4px 0;
-      width: 166px;
+      width: 165px;
       height: 52px;
       font-size: 16px;
       font-weight: 500;
       line-height: 16px;
-      margin-left: -30px;
+      margin-left: -35px;
   }
 
   input[type=text] {
@@ -277,13 +296,13 @@ input[type=text] {
   .graph {
       width: 1000px;
       height: 734.29px;
-      margin-right: 10px;
+      margin-right: 2px;
       display: flex;
   }
 
   .banner__media-logo {
       width: 1440px;
-      margin-top: 56px;
+      margin-top: 61px;
   }
 
   .banner__media-logo p {
