--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -94,9 +94,10 @@ footer {
 @media only screen and (min-width: 415px) {
   footer {
       align-items: center;
-      width: 100%;
+      width: 1440px;
       margin-top: 56px;
       display: flex;
+      margin: auto;
   }
 
   .footer__content {
