--- a/Practice02/src/style/sass/layout/_product-section.scss
+++ b/Practice02/src/style/sass/layout/_product-section.scss
@@ -5,6 +5,7 @@
   align-items: center;
   background-color: #FBFAFE;
   width: 414px;
+  height: 878px;
   margin-right: 15px;
 }
 
@@ -25,10 +26,11 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      width: 100%;
+      width: 1440px;
       height: 641px;
       gap: 74px;
       justify-content: center;
+      margin: auto;
   }
 
   .timeline {
@@ -36,7 +38,8 @@
       max-width: 657px;
       width: 100%;
       height: 518px;
-      margin-left: 4px;
+      margin-left: 10px;
+      margin-top: 2px;
   }
 
   .timeline img {
