--- a/Practice02/src/style/sass/components/_customer-feedbacks.scss
+++ b/Practice02/src/style/sass/components/_customer-feedbacks.scss
@@ -93,7 +93,7 @@
       display: block;
       width: 264px;
       height: 4px;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
       margin-left: 40px;
     }
     
@@ -104,7 +104,7 @@
 
     .name-job {
       margin-left: 16px;
-      margin-bottom: 6px;
+      margin-top: 6px;
   }
     
     .name,
@@ -129,7 +129,6 @@
       gap: 80px;
       height: 126px;
       margin-top: 28px;
-      margin-bottom: 62px;
       margin-left: 10px;
       display: flex;
   }
@@ -141,16 +140,26 @@
       align-items: center;
       display: flex;
       margin-right: 15px;
+      margin-bottom: 28px;
   }
     .customer-infor-hidden {
       display: block;
-      margin-left: -50px;
+      margin-left: -55px;
+      margin-top: 47px;
     }
     .customer-infor, 
     .customer-infor-hidden {
       margin-right: 2px;
       display: flex;
       flex-direction: row;
-      margin-top: 5px;
+     
     }
+    .customer-infor {
+       margin-top: 25px;
+    }
+
+    .customer-ava {
+      margin-bottom: 15px;
+    }
+
   }
