--- a/Practice02/src/style/sass/layout/_about-us-section.scss
+++ b/Practice02/src/style/sass/layout/_about-us-section.scss
@@ -57,10 +57,9 @@ h3 {
       align-items: left;
       width: 1110px;
       height: 224px;
-      margin-top: 56px;
-      margin-right: 2px;
       border-radius: 16px;
       flex-direction: row;
+      margin-right: 0px;
   }
 
   h3 {
@@ -71,12 +70,15 @@ h3 {
       font-style: normal;
       font-weight: 600;
       line-height: 48px;
+      margin-left: 10px;
+      margin-top: 2px;
   }
 
   .install-app {
-      margin-right: 10px;
+      margin-left: 70px;
+      margin-top: 8px;
       display: flex;
-      gap: 20px;
+      gap: 24px;
       flex-direction: row;
 
   }
