--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -95,6 +95,7 @@ footer {
   footer {
       align-items: center;
       width: 1440px;
+      height: 417px;
       margin-top: 56px;
       display: flex;
       margin: auto;
@@ -106,8 +107,8 @@ footer {
       display: flex;
       width: 1340px;
       height: 280px;
-      margin-top: 82px;
-      margin-right: 90px;
+      margin-top: 35px;
+      margin-right: 85px;
   }
 
   .company ul,
@@ -146,7 +147,8 @@ footer {
       display: flex;
       flex-direction: column;
       cursor: pointer;
-      justify-content: space-evenly;
+      justify-content: center;
+      gap: 25px;
   }
 
   .company {
@@ -154,7 +156,7 @@ footer {
   }
 
   .support {
-      margin-right: 18px;
+      margin-right: 60px;
       margin-bottom: 40px;
   }
 
