--- a/Practice02/src/style/sass/components/_functions.scss
+++ b/Practice02/src/style/sass/components/_functions.scss
@@ -44,8 +44,16 @@
     margin-top: 10px;
   }
 
+  @media only screen and (min-width: 576px) {
+    .feature-img img {
+      width: 54px;
+      height: 54px;
+      object-fit: fill;
+    }
+  
+  }
 
-  @media only screen and (min-width: 415px) {
+  @media only screen and (min-width: 992px) {
     .feature-img img {
       width: 64px;
       height: 64px;
