--- a/Practice02/src/style/sass/components/_social-icon.scss
+++ b/Practice02/src/style/sass/components/_social-icon.scss
@@ -38,12 +38,11 @@
     width: 100%;
     height: 100%;
   }
-
   
-@media only screen and (min-width: 415px) {
+@media only screen and (min-width: 992px) {
   .banner__logo {
     justify-content: space-evenly;
-    width: 1342px;
+    /*width: 1342px;*/
     margin-top: 23px;
     display: flex;
     align-items: center;
