--- a/Practice02/src/style/sass/layout/_about-us-section.scss
+++ b/Practice02/src/style/sass/layout/_about-us-section.scss
@@ -2,7 +2,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 414px;
+  width: 100%;
   display: flex;
   margin-top: 50px;
 }
@@ -10,7 +10,7 @@
 .install-section {
   background-color: #796EFF;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: center; 
   width: 100%;
   height: 292px;
   display: flex;
@@ -18,11 +18,12 @@
   background-repeat: no-repeat;
   margin-top: 56px;
   margin-right: 12px;
+  margin-left: 11px;
 }
 
 h3 {
   color: var(--primary);
-  width: 322px;
+  width: 86%;
   font-family: 'Inter', sans-serif;
   text-align: center;
   font-size: 24px;
@@ -38,7 +39,14 @@ h3 {
   flex-direction: column;
 }
 
-@media only screen and (min-width: 415px) {
+@media only screen and (min-width: 576px) {
+  .install-section {
+    width: 100%;
+    height: 350px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .about-us {
       flex-direction: column;
       justify-content: space-between;
