--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   justify-content: space-between;
   align-items: center;
-  width: 414px;
+  width: 100%;
   height: 54px;
   margin-top: 13px;
   display: flex;
@@ -10,7 +10,7 @@
 .header__logo {
   width: 92px;
   height: 24px;
-  margin-left: 10px;
+  margin-left: 30px;
   margin-top: 2px;
   cursor: pointer;
 }
@@ -39,8 +39,8 @@
 }
 
 .menu-icon {
-  margin-top: 20px;
-  margin-right: 15px;
+  margin-top: 15px;
+  margin-right: 30px;
   background: none;
   border: none;
   cursor: pointer;
@@ -60,12 +60,30 @@
   margin-top: 2px;
 }
 
+@media only screen and (min-width: 576px) {
+  .header__logo {
+    margin-top: 10px;
+  }
+  .header__logo img {
+      object-fit: fill;
+      width: 110px;
+  }
+  .menu-icon {
+    margin-top: 30px;
+  }
+  .menu-icon img {
+    width: 28px;
+  }
+  .menu p {
+    font-size: 10px;
+  }
+}
 
-@media only screen and (min-width: 415px) {
+@media only screen and (min-width: 992px) {
   .header {
       justify-content: space-evenly;
       align-items: center;
-      width: 1440px;
+      width: 100%;
       height: 158px;
       margin: auto;
       display: flex;
@@ -74,9 +92,13 @@
   .header__logo {
       width: 92px;
       height: 24px;
-      margin-left: 18px;
+      margin-right: 0px;
       margin-top: 0px;
-      cursor: pointer;
+  }
+
+  .header__logo img {
+    object-fit: fill;
+    width: 90px;
   }
 
   .header__nav {
@@ -152,9 +174,27 @@
       height: 48px;
       border-radius: 4px;
   }
-
-
   .menu {
       display: none;
   }
+}
+
+@media only screen and (min-width: 1400px) {
+  .header__logo {
+    width: 92px;
+    height: 25px;
+    margin-left: 25px;
+    margin-top: 0px;
+}
+
+.header__nav-list {
+  margin-bottom: 10px;
+  margin-left: 52px;
+}
+
+.header__login-get-free {
+  margin-right: 8px;
+  margin-bottom: 2px;
+  display: flex;
+}
 }
