--- a/Practice02/src/style/sass/layout/_product-section.scss
+++ b/Practice02/src/style/sass/layout/_product-section.scss
@@ -4,13 +4,10 @@
   justify-content: center;
   align-items: center;
   background-color: #FBFAFE;
-  width: 414px;
   height: 878px;
-  margin-right: 15px;
 }
 
 .timeline {
-  margin-top: 32px;
   border-radius: 4px;
   width: 384px;
   height: 303.094px;
@@ -21,7 +18,17 @@
   height: 100%
 }
 
-@media only screen and (min-width: 415px) {
+@media only screen and (min-width: 576px) {
+  .timeline {
+    margin-top: 32px;
+    border-radius: 4px;
+    width: 434px;
+    height: 333.094px;
+  }
+}
+
+
+@media only screen and (min-width: 992px) {
   .product {
       display: flex;
       flex-direction: row;
