--- a/Practice02/src/style/sass/pages/_landingpage.scss
+++ b/Practice02/src/style/sass/pages/_landingpage.scss
@@ -4,11 +4,23 @@ body {
     overflow-x: hidden; 
 }
 .container {
-    width: 414px;
+    min-width: 414px;
 }
 
-@media only screen and (min-width: 415px) {
+@media only screen and (min-width: 576px) {
     .container {
-        width: 1440px;
+        min-width: 576px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .container {
+        min-width: 992px;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .container {
+        min-width: 1400px;
     }
 }
