--- a/Practice02/src/style/sass/components/_social-icon.scss
+++ b/Practice02/src/style/sass/components/_social-icon.scss
@@ -41,42 +41,42 @@
   
 @media only screen and (min-width: 992px) {
   .banner__logo {
-    justify-content: space-evenly;
-    /*width: 1342px;*/
+    justify-content: space-between;
     margin-top: 23px;
     display: flex;
     align-items: center;
-    margin-left: 57px;
+    gap: 66px;
   }
   
   .gg {
     width: 80px;
     height: 26.11px;
-    margin-left: 60px;
+    margin-left: 11px;
   }
   
   .air {
     width: 80px;
     height: 24.96px;
-    margin-right: 0px;
+    margin-right: 1px;
   }
   
   .fb {
     width: 77.17px;
     height: 15.82px;
+    margin-right: 7px;
   }
   
   .hub {
     width: 80px;
     height: 23.3px; 
-    margin-right: 6px;
+    margin-right: 9px;
   }
   
   .slack {
     display: block;
     width: 80px;
     height: 20.24px;
-    margin-right: 77px;
+    margin-right: 9px;
   }
   
   .gg,
