--- a/Practice02/src/style/sass/layout/_about-us-section.scss
+++ b/Practice02/src/style/sass/layout/_about-us-section.scss
@@ -47,47 +47,83 @@ h3 {
 }
 
 @media only screen and (min-width: 992px) {
+  .install-section {
+    width: 59%;
+    border-radius: 16px;
+    flex-direction: row;
+}
   .about-us {
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       gap: 6px;
-      width: 1440px;
+      width: 100%;
       height: 786px;
       display: flex;
       margin: auto;
       margin-bottom: 100px;
   }
 
-  .install-section {
-    background-image: url(../../assets/image/install-section.png);
-      justify-content: space-evenly;
-      align-items: left;
-      width: 1110px;
-      height: 224px;
-      border-radius: 16px;
-      flex-direction: row;
-      margin-right: 0px;
-  }
-
   h3 {
-      width: 423px;
+      width: 60%;
       height: 96px;
       text-align: left;
       font-size: 32px;
       font-style: normal;
       font-weight: 600;
       line-height: 48px;
-      margin-left: 10px;
-      margin-top: 2px;
+      margin-left: 44px;
+      margin-bottom: 30px;
   }
 
   .install-app {
-      margin-left: 70px;
+      margin-left: 5px;
       margin-top: 8px;
       display: flex;
       gap: 24px;
-      flex-direction: row;
+      flex-direction: column;
+      margin-right: 23px;
 
   }
 }
+
+@media only screen and (min-width: 1400px) {
+  .install-section {
+      width: 77%;
+      border-radius: 16px;
+      flex-direction: row;
+      margin-top: 64px;
+      margin-right: 66px;
+}
+  
+  .install-app {
+    flex-direction: row;
+    margin-left: 86px;
+}
+  h3 {
+    width: 38%;
+    margin-top: 28px;
+    margin-left: 25px;
+  }
+
+}
+/*  .install-section {
+    background-image: url(../../assets/image/install-section.png);
+      justify-content: space-evenly;
+      align-items: left;
+      width: 58.3%;
+      height: 224px;
+      border-radius: 16px;
+      flex-direction: row;
+      margin-right: 10px;
+  }
+    .install-section {
+    background-image: url(../../assets/image/install-section.png);
+      justify-content: space-evenly;
+      align-items: left;
+      width: 90%;
+      height: 224px;
+      border-radius: 16px;
+      flex-direction: row;
+      margin-right: 10px;
+  }*/
