--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -92,7 +92,7 @@ footer {
 @media only screen and (min-width: 992px) {
   footer {
       align-items: center;
-      width: 1440px;
+      width: 100%;
       height: 417px;
       margin-top: 56px;
       display: flex;
@@ -103,9 +103,9 @@ footer {
       flex-flow: row;
       justify-content: space-evenly;
       display: flex;
-      width: 1340px;
+      width: 51%;
       height: 280px;
-      margin-top: 35px;
+      margin-top: 25px;
       margin-right: 85px;
   }
 
@@ -197,25 +197,23 @@ footer {
   .footer__copy-right {
       justify-content: space-around;
       display: flex;
+      width: 88%;
   }
 
   .copy-right {
-      width: 577px;
+      width: 38%;
       height: 14px;
-      margin-top: 33px;
-      margin-left: 3px;
+      margin-top: 20px;
+      margin-left: 6px;
       font-size: 15px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 14px;
   }
 
   .social-icon {
       display: block;
       gap: 23px;
-      margin-right: 27px;
+      margin-right: 41px;
       display: flex;
-      margin-top: 40px;
+      margin-top: 30px;
   }
 
   .app a {
