--- a/Practice02/src/style/sass/layout/_product-section.scss
+++ b/Practice02/src/style/sass/layout/_product-section.scss
@@ -33,7 +33,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      width: 1440px;
+      width: 100%;
       height: 641px;
       gap: 74px;
       justify-content: center;
