Fix func + chart + footer

--- a/Practice02/src/style/sass/layout/_chart-section.scss
+++ b/Practice02/src/style/sass/layout/_chart-section.scss
@@ -100,8 +100,10 @@
   }
 
   .chart-image {
-      width: 596.39px;
-      height: 404.684px;
+      width: 428.39px;
+      height: 400.684px;
+      /*width: 596.39px;
+      height: 404.684px;*/
       margin-top: 0px;
       margin-left: 15px;
   }
