--- a/Practice02/src/style/sass/components/_functions.scss
+++ b/Practice02/src/style/sass/components/_functions.scss
@@ -106,12 +106,17 @@
       font-weight: 400;
       line-height: 24px;
       text-align: left;
-      width: 89%;
+      width: 124%;
       margin-top: 10px;
     }
   }
   @media only screen and (min-width: 1400px) {
     .feature {
-      width: 71%;
+      width: 93%;
     }
+    .feature__descripstion p,
+    .feature__descripstion__hidden p {
+      width: 92%;
   }
+}
+
