--- a/Practice02/src/style/sass/abstracts/_variables.scss
+++ b/Practice02/src/style/sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 :root {
-    --primary: #FFF;
-    --second: #35414B; 
+    --primary-color: #FFF;
+    --second-color: #35414B; 
     --black: #000;
-    --Ebony-Clay: #1D2830;
-    --Violet: #794CFF;
-    --River-Bed: #4E5A65;
-    --Perano: #B4AEF6;
+    --ebony-clay: #1D2830;
+    --violet: #794CFF;
+    --river-bed: #4E5A65;
+    --perano: #B4AEF6;
   }
