--- a/Practice02/src/style/sass/abstracts/_placeholder.scss
+++ b/Practice02/src/style/sass/abstracts/_placeholder.scss
@@ -1,5 +1,5 @@
 ::placeholder {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     font-weight: 400;
     font-size: 16px;
     line-height: 16px;
@@ -9,7 +9,6 @@
 
 @media only screen and (min-width: 992px) {
     ::placeholder {
-        font-family: 'Inter', sans-serif;
         padding: 18px 99px 18px 2px;
     }
 }
