--- a/Practice02/src/style/sass/layout/_about-us-section.scss
+++ b/Practice02/src/style/sass/layout/_about-us-section.scss
@@ -22,7 +22,7 @@
 }
 
 h3 {
-  color: var(--primary);
+  color: var(--primary-color);
   width: 86%;
   font-family: 'Inter', sans-serif;
   text-align: center;
@@ -48,9 +48,10 @@ h3 {
 
 @media only screen and (min-width: 992px) {
   .install-section {
-    width: 59%;
-    border-radius: 16px;
+    width: 100%;
+    height: 289px;
     flex-direction: row;
+    margin-top: 0px;
 }
   .about-us {
       flex-direction: column;
@@ -89,11 +90,9 @@ h3 {
 
 @media only screen and (min-width: 1400px) {
   .install-section {
-      width: 77%;
+      max-width: 14%;
       border-radius: 16px;
       flex-direction: row;
-      margin-top: 64px;
-      margin-right: 66px;
 }
   
   .install-app {
@@ -101,7 +100,7 @@ h3 {
     margin-left: 86px;
 }
   h3 {
-    width: 38%;
+    width: 45%;
     margin-top: 28px;
     margin-left: 25px;
   }
