--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -43,7 +43,7 @@
 .banner__get-acc a {
   background-color: #F2F9EB;
   color: #35414B;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -64,7 +64,7 @@
   width: 65%;
   color: var(--Limed-Spruce);
   text-align: center;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-size: 32px;
   font-style: normal;
   font-weight: 600;
@@ -73,8 +73,8 @@
 
 .banner__simple-text {
   text-align: center;
-  color: var(--River-Bed);
-  font-family: 'Inter', sans-serif;
+  color: var(--river-bed);
+  font-family: 'Inter';
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -90,20 +90,20 @@
 }
 
 .text-box {
-  background-color: var(--primary);
+  background-color: var(--primary-color);
   border: 1px solid #E1E5EA;
   border-radius: 4px;
-  width: 293px;
+  width: 314px;
   height: 52px;
 }
 
 input[type=text] {
-  padding-left: 20px;
+  padding-left: 0px;
 }
 
 .submit {
-  background-color: var(--Violet);
-  color: var(--primary);
+  background-color: var(--violet);
+  color: var(--primary-color);
   cursor: pointer;
   letter-spacing: 0;
   text-align: center;
@@ -144,9 +144,9 @@ input[type=text] {
 
 .banner__media-logo p {
   text-align: center;
-  color: var(--River-Bed);
+  color: var(--river-bed);
   letter-spacing: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-size: 11px;
   font-style: normal;
   font-weight: 400;
@@ -156,8 +156,8 @@ input[type=text] {
 .banner__media-logo b {
   letter-spacing: 0;
   text-align: center;
-  color: var(--River-Bed);
-  font-family: 'Inter', sans-serif;
+  color: var(--river-bed);
+  font-family: 'Inter';
   font-size: 11px;
   font-style: normal;
   font-weight: 700;
@@ -197,7 +197,7 @@ input[type=text] {
   .banner__save {
       display: block;
       text-align: center;
-      color: var(--primary);
+      color: var(--primary-color);
       z-index: 1;
       background-color: #81C43B;
       border-radius: 100px;
@@ -223,7 +223,7 @@ input[type=text] {
 }
 
   .banner__get-acc a {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Inter';
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
@@ -265,8 +265,8 @@ input[type=text] {
   }
 
   .banner__simple-text {
-      color: var(--River-Bed);
-      font-family: 'Inter', sans-serif;
+      color: var(--river-bed);
+      font-family: 'Inter';
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
@@ -283,32 +283,32 @@ input[type=text] {
       display: inline;
       height: 60px;
       margin-left: 0px;
-      margin-top: -7px;
+      margin-top: -9px;
       margin-bottom: -9px;
   }
 
   .text-box {
-      background-color: var(--primary);
+      background-color: var(--primary-color);
       border: 1px solid #E1E5EA;
       border-radius: 4px 0px 0 4px;
-      width: 322px;
-      height: 48px;
+      width: 242px;
+      height: 50px;
   }
 
   .submit {
-      background-color: var(--Violet);
-      color: var(--primary);
+      background-color: var(--violet);
+      color: var(--primary-color);
       cursor: pointer;
       letter-spacing: 0;
       text-align: center;
       border: 1px;
       border-radius: 0 4px 4px 0;
       width: 165px;
-      height: 52px;
+      height: 55px;
       font-size: 16px;
       font-weight: 500;
       line-height: 16px;
-      margin-left: -35px;
+      margin-left: -5px;
   }
 
   input[type=text] {
