--- a/Practice02/src/style/sass/layout/_chart-section.scss
+++ b/Practice02/src/style/sass/layout/_chart-section.scss
@@ -31,7 +31,7 @@
 .chart__content h2 {
   text-align: center;
   width: 190px;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   color: var(--second);
   font-size: 18px;
   font-weight: 600;
@@ -40,8 +40,8 @@
 }
 
 .chart__content p {
-  font-family: 'Inter', sans-serif;
-  color: var(--River-Bed);
+  font-family: 'Inter';
+  color: var(--river-bed);
   width: 72%;
   font-size: 16px;
   color: #4E5A65;
@@ -53,7 +53,7 @@
 
 .chart-button {
   background-color: #796EFF;
-  color: var(--primary);
+  color: var(--primary-color);
   cursor: pointer;
   border: none;
   border-radius: 4px;
