--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--Ebony-Clay);
+  background-color: var(--ebony-clay);
   flex-direction: column;
   justify-content: space-around;
   height: 483px;
@@ -36,12 +36,13 @@ footer {
 .support p,
 .legal p,
 .app p {
-  color: var(--primary);
-  font-family: 'Inter', sans-serif;
+  color: var(--primary-color);
+  font-family: 'Inter';
   font-size: 16px;
   font-weight: 600;
   line-height: 16px;
   margin-left: 30px;
+  width: 84px;
 }
 
 .app {
@@ -63,8 +64,8 @@ footer {
 }
 
 .line-footer {
-  border: 0.1px solid var(--primary);
-  color: var(--primary);
+  border: 0.1px solid var(--primary-color);
+  color: var(--primary-color);
   opacity: 0.1;
   margin-bottom: -30px;
 }
@@ -76,7 +77,7 @@ footer {
 .copy-right {
   color: #D9DBE1;
   margin-left: 32px;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -132,7 +133,7 @@ footer {
   .support ul li a,
   .legal ul li a {
       text-decoration: none;
-      color: var(--primary);
+      color: var(--primary-color);
       font-weight: 400;
       font-size: 16px;
       line-height: 16px;
@@ -197,7 +198,7 @@ footer {
   .footer__copy-right {
       justify-content: space-around;
       display: flex;
-      width: 88%;
+      max-width: 88%;
   }
 
   .copy-right {
@@ -219,5 +220,11 @@ footer {
   .app a {
       width: 20px;
   }
+}
 
+@media only screen and (min-width: 1400px) {
+  .footer__content {
+      align-items: center;
+      max-width: 19%;
+  }
 }
