--- a/Practice02/src/style/sass/layout/_functions-section.scss
+++ b/Practice02/src/style/sass/layout/_functions-section.scss
@@ -1,5 +1,5 @@
 h2 {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-weight: 600;
   font-size: 18px;
   line-height: 18px;
@@ -29,7 +29,7 @@ h2 {
   background: #ECE5FF;
   color: #7259FA;
   text-align: center;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
