--- a/Practice02/src/style/sass/pages/_landingpage.scss
+++ b/Practice02/src/style/sass/pages/_landingpage.scss
@@ -21,6 +21,6 @@ body {
 
 @media only screen and (min-width: 1400px) {
     .container {
-        min-width: 1400px;
+        max-width: 1440px;
     }
 }
